fixed spacing/resizing errors, added publications

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,17 +6,20 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-.img-column {
-  float: left;
-  width: 20%;
-  padding: 20px;
+.member{
+    width: 300px;
+    height: 400px;
+    display: inline-block;
+
 }
 
-
-
-.img-row {
-	padding-right: 20px;
+.name {
+	height: 30px;
+	font-size: 1em;
 }
+
+.members{
+	width: 90%;}
 
 /* Clear floats after image containers */
 .img-row::after {
@@ -1886,6 +1889,7 @@ input, select, textarea {
 		line-height: 4.75em;
 		outline: 0;
 		padding: 0 3.75em;
+		padding-bottom: 10px;
 		position: relative;
 		text-align: center;
 		text-decoration: none;
@@ -2066,6 +2070,7 @@ input, select, textarea {
 				position: absolute;
 				left: 3em;
 				top: 3em;
+				bottom: 1em;
 				opacity: 1;
 			}
 
@@ -2231,6 +2236,7 @@ input, select, textarea {
 
 					.features section:first-child {
 						border-top-width: 0 !important;
+						bottom: 1em;
 					}
 
 		}
@@ -2238,12 +2244,13 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			.features section {
-				padding: 2.5em 1.5em 0.1em 5.5em ;
+				padding: 2.5em 1.5em 1em 5.5em ;
 			}
 
 				.features section .icon {
 					left: 1.5em;
 					top: 2em;
+					bottom: 1em;
 				}
 
 		}
@@ -3130,7 +3137,6 @@ input, select, textarea {
 
 				.spotlights > section > .image {
 					width: 100%;
-					height: 50vh;
 				}
 
 				.spotlights > section > .content {
@@ -3149,8 +3155,6 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			.spotlights > section > .image {
-				height: 50vh;
-				min-height: 15em;
 			}
 
 			.spotlights > section > .content {
